# pixel

./: .gitignore  .gitmodules  .travis.yaml  .travis.yml  Cargo.toml  Makefile  README.MD  benchmark.md  spec.md  todo.md
benches/: mod.rs  pixel_bench.rs
benches/benchmarks/: bench_agg.rs  bench_api.rs  bench_curve.rs  bench_sk_ops.rs  bench_ssk_ops.rs  bench_time.rs  mod.rs
benches/pre-keys/: Cargo.toml
benches/pre-keys/data/: pk_bin_0000.txt  pk_bin_0001.txt  pk_bin_0002.txt  pk_bin_0003.txt  pk_bin_0004.txt  pk_bin_0005.txt  pk_bin_0006.txt  pk_bin_0007.txt  pk_bin_0008.txt  pk_bin_0009.txt  pk_bin_0010.txt  pk_bin_0011.txt  pk_bin_0012.txt  pk_bin_0013.txt  pk_bin_0014.txt  pk_bin_0015.txt  pk_bin_0016.txt  pk_bin_0017.txt  pk_bin_0018.txt  pk_bin_0019.txt  pk_bin_0020.txt  pk_bin_0021.txt  pk_bin_0022.txt  pk_bin_0023.txt  pk_bin_0024.txt  pk_bin_0025.txt  pk_bin_0026.txt  pk_bin_0027.txt  pk_bin_0028.txt  pk_bin_0029.txt  pk_bin_0030.txt  pk_bin_0031.txt  pk_bin_0032.txt  pk_bin_0033.txt  pk_bin_0034.txt  pk_bin_0035.txt  pk_bin_0036.txt  pk_bin_0037.txt  pk_bin_0038.txt  pk_bin_0039.txt  (+19960 more)
benches/pre-keys/src/: main.rs
c_wrapper/: pixel-bind.h  pixel.c  pixel.h  pixel_c.h  test.c
pixel-python/: README.md  keygen.py  keyupdate.py  param.py  prng.py  sig.py  test_vector.py
pixel-sage/: Makefile  pixel.sage  pixel_util.sage
scripts/: tree-time.py
scripts/python_imp/: pixel.py
scripts/sage_imp/: Makefile  cross_ref.sage  iso_g1.sobj  iso_g2.sobj  key.sage  pairing.sage  param.sage  sign.sage
src/: det_test.rs  domain_sep.rs  ffi.rs  gammafunction.rs  hash_to_field.rs  initkey.rs  key_pair.rs  keys.rs  lib.rs  main.rs  membership.rs  param.rs  pixel.rs  pixel_bench.rs  pixel_err.rs  pixel_test.rs  pop.rs  prng.rs  public_key.rs  secret_key.rs  serdes.rs  sig.rs  sign.rs  subkeys.rs  time.rs  util.rs  verify.rs
src/keys/: keypair.rs  mod.rs  secretkey.rs  subsecretkey.rs
src/test/: api.rs  det_test.rs  ffi.rs  getter.rs  keys.rs  membership.rs  mod.rs  pixel_zeroize.rs  prng.rs  serdes.rs  sig.rs
test_buf/: test_vector.py
test_vector/: Cargo.toml  README.MD
test_vector/src/: main.rs
