[package]
name = "pixel"

version = "0.1.0"
authors = [
    "Zhenfei Zhang <zhenfei@algorand.com>",
]
license = "MIT/Apache-2.0"

description = "Pixel: Algorand's consensus signature over curve BLS12-381"
homepage = "https://github.com/algorand/pixel"
repository = "https://github.com/algorand/pixel"
autobenches = false

[dependencies]
pairing = { version = "0.15", git = "https://github.com/algorand/pairing-fork"}
hkdf = "0.7"
sha2 = "0.8"
ff = { version = "0.4", features = ["derive"] }
bls_sigs_ref-rs = { git = "ssh://git@github.com/algorand/bls_sigs_ref-fork"}
clear_on_drop = "0.2.3"
pixel_param = { git = "ssh://git@github.com/algorand/pixel_param"}
bigint = { version = "4", default-features = false }
libc = { version = "0.2", features = ["align"] }


[dev-dependencies]
hex-literal = "0.1"
rand = "0.4"
criterion = "0.2.11"
walkdir = "2.2.7"

[[bench]]
name = "pixel_bench"
harness = false

[features]



[lib]
# we need a rust lib for cargo bench
# and a static lib for c-binder
crate-type = ["lib", "staticlib"]
