[package]
name = "pixel"

version = "0.1.0"
authors = [
    "Zhenfei Zhang <zhenfei@algorand.com>",
]
license = "MIT"

description = "Pixel: Algorand's consensus signature over curve BLS12-381"
homepage = "https://github.com/algorand/pixel"
repository = "https://github.com/algorand/pixel"
autobenches = false

[dependencies]
#pairing-plus = { path = "../pairing-plus"}
pairing-plus = { git = "https://github.com/algorand/pairing-plus"}
#pairing-plus = "0.17"
hkdf = "0.7"
sha2 = "0.8"

#ff = { path = "../ff2"}
ff = { git = "https://github.com/algorand/ff"}
#ff = { version = "0.4", features = ["derive"] }
bls_sigs_ref = { git = "https://github.com/algorand/bls_sigs_ref"}
#bls_sigs_ref = "0.1"
#bls_sigs_ref = { path = "../bls_sigs_ref/rust-impl"}
#clear_on_drop = "0.2.3"
#pixel_param = { path = "../pixel_param"}

pixel_param = { git = "https://github.com/algorand/pixel_param"}
bigint = { version = "4", default-features = false }
libc = { version = "0.2", features = ["align"] }
zeroize = {version = "1.1", features = ["zeroize_derive"]}
secrecy="0.6"

[dev-dependencies]
hex-literal = "0.1"
rand_core = "0.5"
rand_xorshift = "0.2"
criterion = "0.2.11"
walkdir = "2.2.7"
rand = "0.4"

[[bench]]
name = "pixel_bench"
harness = false

[features]



[lib]
# we need a rust lib for cargo bench
# and a static lib for c-binder
crate-type = ["lib", "staticlib"]
